# mote-sp26-test

./: .env  .gitmodules  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  package.xml
.devcontainer/: devcontainer.json  docker-compose.yml
src/: README.md
src/hw2/: README.md  writeup.md
src/hw2/foxglove/: lrr_hw2_layout.json
src/hw2/hw2_pkg/: CMakeLists.txt  package.xml  setup.py
src/hw2/hw2_pkg/hw2_pkg/: forward_kinematics.py  inverse_kinematics.py  odometry.py
src/hw2/hw2_pkg/test/: fk_tests.py  fk_tests.test  ik_tests.py  ik_tests.test  odom_tests.py  (+1 more)
src/hw3/: .gitattributes  README.md  writeup.md
src/hw3/bags/: pf_test.bag
src/hw3/foxglove/: lrr_hw3_layout.json
src/hw3/hw3_pkg/: package.xml
src/hw4/: README.md  writeup.md
src/hw4/bags/: placeholder.txt
src/hw4/foxglove/: lrr_hw4_layout.json
src/hw4/hw4_pkg/: setup.py
src/lrr-fa24-beta-hw3/: README.md
src/lrr-fa24-beta-hw3/foxglove/: lrr_hw3_layout.json
src/lrr-fa24-beta-hw3/hw3_pkg/: CMakeLists.txt  setup.py
src/lrr-fa24-beta-hw4/: README.md
src/lrr-fa24-beta-hw4/foxglove/: lrr_hw4_layout.json
src/lrr-fa24-beta-hw4/hw4_pkg/: CMakeLists.txt  package.xml
src/lrr-fa24-beta-hw4/hw4_pkg/hw4_pkg/: pure_pursuit.py  pure_pursuit_node.py  pure_pursuit_visualizer.py
src/lrr-fa24-beta-hw4/hw4_pkg/hw4_pkg/launch/: pure_pursuit.launch  rrt_test.launch
src/lrr-fa24-beta-hw4/hw4_pkg/hw4_pkg/planning/: search.py  utils.py
src/lrr-fa24-beta-hw4/hw4_pkg/maps/: rrt_test_map.yaml
src/lrr-fa24-beta-hw4/hw4_pkg/test/: pure_pursuit_tests.py  pure_pursuit_tests.test
(+46 files in other folders)
