<?xml version="1.0"?>
<package format="2">
  <name>mote_ros_noetic</name>
  <version>0.1.0</version>
  <description>ROS Noetic driver for the Mote mobile robot.</description>
  <maintainer email="michael@michael-crum.com">Mote Contributors</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
</package>
